add entry to gitignore file

--- a/history
+++ b/history
@@ -5,12 +5,12 @@
 (setq embark--prompter-history '("o l      rectangle-number-lines"))
 (setq yes-or-no-p-history '("yes"))
 (setq org-roam-node-history '("org"))
-(setq search-ring '(#("dracula" 0 7 (isearch-case-fold-search t isearch-regexp-function nil)) #("theme" 0 5 (isearch-case-fold-search t isearch-regexp-function nil)) #("bpi" 0 3 (isearch-case-fold-search t isearch-regexp-function nil)) #("ise" 0 3 (isearch-case-fold-search t isearch-regexp-function nil)) #("text" 0 4 (isearch-case-fold-search t isearch-regexp-function nil)) #("charcoal" 0 8 (isearch-case-fold-search t isearch-regexp-function nil)) #("desktop" 0 7 (isearch-case-fold-search t isearch-regexp-function nil)) #("save" 0 4 (isearch-case-fold-search t isearch-regexp-function nil)) #("settings" 0 8 (isearch-case-fold-search t isearch-regexp-function nil)) #("bedrock" 0 7 (isearch-case-fold-search t isearch-regexp-function nil)) #("bed" 0 3 (isearch-case-fold-search t isearch-regexp-function nil)) #("when" 0 4 (isearch-case-fold-search t isearch-regexp-function nil)) #("24" 0 2 (isearch-case-fold-search t isearch-regexp-function nil)) #("buffer" 0 6 (isearch-case-fold-search t isearch-regexp-function nil))))
+(setq search-ring '(#("ecn" 0 3 (isearch-case-fold-search t isearch-regexp-function nil)) #("dracula" 0 7 (isearch-case-fold-search t isearch-regexp-function nil)) #("theme" 0 5 (isearch-case-fold-search t isearch-regexp-function nil)) #("bpi" 0 3 (isearch-case-fold-search t isearch-regexp-function nil)) #("ise" 0 3 (isearch-case-fold-search t isearch-regexp-function nil)) #("text" 0 4 (isearch-case-fold-search t isearch-regexp-function nil)) #("charcoal" 0 8 (isearch-case-fold-search t isearch-regexp-function nil)) #("desktop" 0 7 (isearch-case-fold-search t isearch-regexp-function nil)) #("save" 0 4 (isearch-case-fold-search t isearch-regexp-function nil)) #("settings" 0 8 (isearch-case-fold-search t isearch-regexp-function nil)) #("bedrock" 0 7 (isearch-case-fold-search t isearch-regexp-function nil)) #("bed" 0 3 (isearch-case-fold-search t isearch-regexp-function nil)) #("when" 0 4 (isearch-case-fold-search t isearch-regexp-function nil)) #("24" 0 2 (isearch-case-fold-search t isearch-regexp-function nil)) #("buffer" 0 6 (isearch-case-fold-search t isearch-regexp-function nil))))
 (setq eww-prompt-history '("https://docs.github.com/en/migrations/importing-source-code/using-the-command-line-to-import-source-code/adding-locally-hosted-code-to-github" "eshell as main shell ambrevar" "Cursor Movement
 
 " "https://ambrevar.xyz/emacs-eshell/index.html" "https://github.com/minad/org-modern" "http://xahlee.info/emacs/misc/xah-fly-keys.html"))
-(setq buffer-name-history '("*Messages*" "*eww*" "mytodos.org" "*Backtrace*" "*eww*" "*scratch*" "mytodos.org" "init.el" "11.22.63.Season.1.720p.BluRay.x264.ShAaNiG" "mytodos.org" "11.22.63.Season.1.720p.BluRay.x264.ShAaNiG" ".emacs.d/init.el" "mytodos.org" ".emacs.d/init.el" "11.22.63.Season.1.720p.BluRay.x264.ShAaNiG" ".emacs.d/init.el" "mytodos.org" ".emacs.d/init.el" "11.22.63.Season.1.720p.BluRay.x264.ShAaNiG" ".emacs.d/init.el" "11.22.63.Season.1.720p.BluRay.x264.ShAaNiG" "*scratch*" ".bash_aliases" "mytodos.org" "emacs.service" "mytodos.org" "*ansi-term*" "*scratch*" "mytodos.org" "*ansi-term*" "org.el" "xah-fly-keys.tute.org" "mytodos.org" "*shell*" "xah-fly-keys.tute.org" "*Help*" "*scratch*" "*eww*" "*scratch*" "init.el" "*scratch*"))
+(setq buffer-name-history '(".bash_aliases" "*Messages*" "*eww*" "mytodos.org" "*Backtrace*" "*eww*" "*scratch*" "mytodos.org" "init.el" "11.22.63.Season.1.720p.BluRay.x264.ShAaNiG" "mytodos.org" "11.22.63.Season.1.720p.BluRay.x264.ShAaNiG" ".emacs.d/init.el" "mytodos.org" ".emacs.d/init.el" "11.22.63.Season.1.720p.BluRay.x264.ShAaNiG" ".emacs.d/init.el" "mytodos.org" ".emacs.d/init.el" "11.22.63.Season.1.720p.BluRay.x264.ShAaNiG" ".emacs.d/init.el" "11.22.63.Season.1.720p.BluRay.x264.ShAaNiG" "*scratch*" ".bash_aliases" "mytodos.org" "emacs.service" "mytodos.org" "*ansi-term*" "*scratch*" "mytodos.org" "*ansi-term*" "org.el" "xah-fly-keys.tute.org" "mytodos.org" "*shell*" "xah-fly-keys.tute.org" "*Help*" "*scratch*" "*eww*" "*scratch*" "init.el" "*scratch*"))
 (setq regexp-history '("dired" "all-the-icons" "embark" "org-modern" "restart"))
 (setq minibuffer-history '("/bin/bash" "dracula-theme" "cobalt" "gnome" "tango" "/bin/bash" "bedrock-init" "desktop-auto-save" "desktop-save-mode" "enable-recursive-minibuffers" "*eww*" "set-frame-font" "electric-pair-mode" "load-theme" "charcoal-black" "debug-on-entry"))
-(setq file-name-history '("~/.emacs.d/notes/eshell.intro.org" "~/.bash_aliases" "~/.gitignore_global" "/media/eriberttom/e5f62be8-da80-4c69-8e54-cceb195ca307/eriberttom/Downloads/11.22.63.Season.1.720p.BluRay.x264.ShAaNiG/" "~/.bashrc" "~/.bash_aliases" "~/.gitignore_global" "~/.config/systemd/user/emacs.service" "~/.emacs.d/todos/mytodos.org" "~/.emacs.d/init.el" "~/.emacs.d/extras/org.el" "~/bak.emacs.dirs/bedrock.emacs.d/init.el" "~/.emacs.d/init.el" "~/bak.emacs.dirs/bedrock.emacs.d/init.el" "~/.emacs.d/init.el" "~/.emacs.d/" "~/.emacs.d/notes/xah-fly-keys.tute.org" "~/.emacs.d/notes/xah-keybindings.cheatsheet.org" "~/Github-repos/better-defaults/better-defaults.el" "~/.emacs.d/init.el" "~/bak.emacs.dirs/bedrock.emacs.d/init.el" "~/.emacs.d/notes/xah-fly-keys.tute.org" "~/.emacs.d/init.el" "~/Github-repos/better-defaults/better-defaults.el" "~/.emacs.d/init.el" "~/Github-repos/better-defaults/README.md" "~/bak.emacs.dirs/bedrock.emacs.d/init.el" "~/Github-repos/better-defaults/README.md"))
-(setq extended-command-history '("visual-line-mode" "fit-frame-to-buffer" "org-todo" "browse-url-at-point" "embark-dwim" "embark-act" "org-todo" "ansi-term" "switch-to-buffer-other-frame" "fit-frame-to-buffer" "switch-to-buffer-other-frame" "delete-frame" "fit-frame-to-buffer" "tab-previous" "org-todo" "load-theme" "package-install" "package-refresh-contents" "tab-previous" "xah-extend-selection" "xah-select-block" "tab-previous" "org-todo" "browse-url-at-point" "shr-browse-url" "eww-follow-link" "org-open-at-point" "tab-previous" "fit-frame-to-buffer" "kill-buffer" "tab-previous" "save-buffer" "insert-buffer" "switch-to-buffer-other-tab" "switch-to-buffer-other-frame" "eshell" "dired-other-frame" "switch-to-buffer-other-frame" "eww" "switch-to-buffer-other-tab" "load-theme" "switch-to-buffer-other-tab" "tab-previous" "ibuffer" "switch-to-buffer-other-tab" "fit-frame-to-buffer" "tab-previous" "basic-save-buffer" "xah-fly-save-buffer-if-file" "find-file-other-tab" "switch-to-buffer-other-tab" "ibuffer" "fit-frame-to-buffer" "restart-emacs" "org-todo" "insert-buffer" "switch-to-buffer" "dired-hide-details-mode" "switch-to-buffer-other-tab" "switch-to-buffer" "switch-to-buffer-other-tab" "switch-to-buffer" "org-todo" "switch-to-buffer" "all-the-icons-dired-mode" "switch-to-buffer-other-tab" "package-list-packages" "all-the-icons-dired-mode" "switch-to-buffer-other-tab" "all-the-icons-dired-mode" "all-the-icons-install-fonts" "package-list-packages" "switch-to-buffer-other-tab" "find-file-other-tab" "switch-to-buffer-other-tab" "xah-fly-save-buffer-if-file" "save-buffer" "find-file-other-tab" "switch-to-buffer-other-tab" "org-todo" "switch-to-buffer-other-tab" "find-file-other-tab" "xah-insert-date" "fit-frame-to-buffer" "org-indent-block" "org-indent-item" "indent-region" "org-todo" "switch-to-buffer-other-tab" "save-buffer" "xah-fly-save-buffer-if-file" "switch-to-buffer-other-tab" "org-todo" "switch-to-buffer-other-tab" "org-todo" "tab-previous" "switch-to-buffer-other-tab" "ansi-term" "switch-to-buffer-other-tab" "package-list-packages"))
+(setq file-name-history '("~/.emacs.d/.gitignore" "~/.emacs.d/notes/eshell.intro.org" "~/.bash_aliases" "~/.gitignore_global" "/media/eriberttom/e5f62be8-da80-4c69-8e54-cceb195ca307/eriberttom/Downloads/11.22.63.Season.1.720p.BluRay.x264.ShAaNiG/" "~/.bashrc" "~/.bash_aliases" "~/.gitignore_global" "~/.config/systemd/user/emacs.service" "~/.emacs.d/todos/mytodos.org" "~/.emacs.d/init.el" "~/.emacs.d/extras/org.el" "~/bak.emacs.dirs/bedrock.emacs.d/init.el" "~/.emacs.d/init.el" "~/bak.emacs.dirs/bedrock.emacs.d/init.el" "~/.emacs.d/init.el" "~/.emacs.d/" "~/.emacs.d/notes/xah-fly-keys.tute.org" "~/.emacs.d/notes/xah-keybindings.cheatsheet.org" "~/Github-repos/better-defaults/better-defaults.el" "~/.emacs.d/init.el" "~/bak.emacs.dirs/bedrock.emacs.d/init.el" "~/.emacs.d/notes/xah-fly-keys.tute.org" "~/.emacs.d/init.el" "~/Github-repos/better-defaults/better-defaults.el" "~/.emacs.d/init.el" "~/Github-repos/better-defaults/README.md" "~/bak.emacs.dirs/bedrock.emacs.d/init.el" "~/Github-repos/better-defaults/README.md"))
+(setq extended-command-history '("magit-status" "find-file-other-tab" "switch-to-buffer-other-tab" "tab-close" "tab-next" "tab-previous" "org-todo" "magit-status" "visual-line-mode" "fit-frame-to-buffer" "org-todo" "browse-url-at-point" "embark-dwim" "embark-act" "org-todo" "ansi-term" "switch-to-buffer-other-frame" "fit-frame-to-buffer" "switch-to-buffer-other-frame" "delete-frame" "fit-frame-to-buffer" "tab-previous" "org-todo" "load-theme" "package-install" "package-refresh-contents" "tab-previous" "xah-extend-selection" "xah-select-block" "tab-previous" "org-todo" "browse-url-at-point" "shr-browse-url" "eww-follow-link" "org-open-at-point" "tab-previous" "fit-frame-to-buffer" "kill-buffer" "tab-previous" "save-buffer" "insert-buffer" "switch-to-buffer-other-tab" "switch-to-buffer-other-frame" "eshell" "dired-other-frame" "switch-to-buffer-other-frame" "eww" "switch-to-buffer-other-tab" "load-theme" "switch-to-buffer-other-tab" "tab-previous" "ibuffer" "switch-to-buffer-other-tab" "fit-frame-to-buffer" "tab-previous" "basic-save-buffer" "xah-fly-save-buffer-if-file" "find-file-other-tab" "switch-to-buffer-other-tab" "ibuffer" "fit-frame-to-buffer" "restart-emacs" "org-todo" "insert-buffer" "switch-to-buffer" "dired-hide-details-mode" "switch-to-buffer-other-tab" "switch-to-buffer" "switch-to-buffer-other-tab" "switch-to-buffer" "org-todo" "switch-to-buffer" "all-the-icons-dired-mode" "switch-to-buffer-other-tab" "package-list-packages" "all-the-icons-dired-mode" "switch-to-buffer-other-tab" "all-the-icons-dired-mode" "all-the-icons-install-fonts" "package-list-packages" "switch-to-buffer-other-tab" "find-file-other-tab" "switch-to-buffer-other-tab" "xah-fly-save-buffer-if-file" "save-buffer" "find-file-other-tab" "switch-to-buffer-other-tab" "org-todo" "switch-to-buffer-other-tab" "find-file-other-tab" "xah-insert-date" "fit-frame-to-buffer" "org-indent-block" "org-indent-item" "indent-region" "org-todo" "switch-to-buffer-other-tab" "save-buffer" "xah-fly-save-buffer-if-file" "switch-to-buffer-other-tab"))
