--- a/notes/intro-emacs-elisp.org
+++ b/notes/intro-emacs-elisp.org
@@ -727,43 +727,18 @@ Next: Whitespace in Lists, Previous: Numbers, Lists inside of Lists, Up: Lisp Li
 
 1.1.1 Lisp Atoms
 
-In Lisp, what we have been calling words are called atoms. This term comes from the historical
-meaning of the word atom, which means “indivisible”. As far as Lisp is concerned, the words we have
-been using in the lists cannot be divided into any smaller parts and still mean the same thing as part
-of a program; likewise with numbers and single character symbols like ‘+’. On the other hand, unlike an
-ancient atom, a list can be split into parts. (See car cdr & cons Fundamental Functions.) 
+In Lisp, what we have been calling words are called atoms. This term comes from the historical meaning of the word atom, which means “indivisible”. As far as Lisp is concerned, the words we have been using in the lists cannot be divided into any smaller parts and still mean the same thing as part of a program; likewise with numbers and single character symbols like ‘+’. On the other hand, unlike an ancient atom, a list can be split into parts. (See car cdr & cons Fundamental Functions.) 
 
 In a list, atoms are separated from each other by whitespace. They can be right next to a parenthesis. 
 
-Technically speaking, a list in Lisp consists of parentheses surrounding atoms separated by whitespace
-or surrounding other lists or surrounding both atoms and other lists. A list can have just one atom in
-it or have nothing in it at all. A list with nothing in it looks like this: (), and is called the empty list.
-Unlike anything else, an empty list is considered both an atom and a list at the same time. 
+Technically speaking, a list in Lisp consists of parentheses surrounding atoms separated by whitespace or surrounding other lists or surrounding both atoms and other lists. A list can have just one atom in it or have nothing in it at all. A list with nothing in it looks like this: (), and is called the empty list. Unlike anything else, an empty list is considered both an atom and a list at the same time. 
 
-The printed representation of both atoms and lists are called symbolic expressions or, more concisely,
-s-expressions. The word expression by itself can refer to either the printed representation, or to the atom
-or list as it is held internally in the computer. Often, people use the term expression indiscriminately.
-(Also, in many texts, the word form is used as a synonym for expression.) 
+The printed representation of both atoms and lists are called symbolic expressions or, more concisely, s-expressions. The word expression by itself can refer to either the printed representation, or to the atom or list as it is held internally in the computer. Often, people use the term expression indiscriminately. (Also, in many texts, the word form is used as a synonym for expression.) 
+Incidentally, the atoms that make up our universe were named such when they were thought to be indivisible; but it has been found that physical atoms are not indivisible. Parts can split off an atom or it can fission into two parts of roughly equal size. Physical atoms were named prematurely, before their truer nature was found. In Lisp, certain kinds of atom, such as an array, can be separated into parts; but the mechanism for doing this is different from the mechanism for splitting a list. As far as list operations are concerned, the atoms of a list are unsplittable. 
 
-Incidentally, the atoms that make up our universe were named such when they were thought to be
-indivisible; but it has been found that physical atoms are not indivisible. Parts can split off an atom or
-it can fission into two parts of roughly equal size. Physical atoms were named prematurely, before
-their truer nature was found. In Lisp, certain kinds of atom, such as an array, can be separated into
-parts; but the mechanism for doing this is different from the mechanism for splitting a list. As far as
-list operations are concerned, the atoms of a list are unsplittable. 
+As in English, the meanings of the component letters of a Lisp atom are different from the meaning the letters make as a word. For example, the word for the South American sloth, the ‘ai’, is completely different from the two words, ‘a’, and ‘i’. 
 
-As in English, the meanings of the component letters of a Lisp atom are different from the meaning
-the letters make as a word. For example, the word for the South American sloth, the ‘ai’, is completely
-different from the two words, ‘a’, and ‘i’. 
-
-There are many kinds of atom in nature but only a few in Lisp: for example, numbers, such as 37, 511,
-or 1729, and symbols, such as ‘+’, ‘foo’, or ‘forward-line’. The words we have listed in the examples
-above are all symbols. In everyday Lisp conversation, the word “atom” is not often used, because
-programmers usually try to be more specific about what kind of atom they are dealing with. Lisp
-programming is mostly about symbols (and sometimes numbers) within lists. (Incidentally, the
-preceding three word parenthetical remark is a proper list in Lisp, since it consists of atoms, which in
-this case are symbols, separated by whitespace and enclosed by parentheses, without any non-Lisp
-punctuation.) 
+There are many kinds of atom in nature but only a few in Lisp: for example, numbers, such as 37, 511, or 1729, and symbols, such as ‘+’, ‘foo’, or ‘forward-line’. The words we have listed in the examples above are all symbols. In everyday Lisp conversation, the word “atom” is not often used, because programmers usually try to be more specific about what kind of atom they are dealing with. Lisp programming is mostly about symbols (and sometimes numbers) within lists. (Incidentally, the preceding three word parenthetical remark is a proper list in Lisp, since it consists of atoms, which in this case are symbols, separated by whitespace and enclosed by parentheses, without any non-Lisp punctuation.) 
 
 Text between double quotation marks—even sentences or paragraphs—is also an atom. Here is an
 example: 
@@ -827,17 +802,9 @@ Next: Generate an Error Message, Previous: Lisp Lists, Up: List Processing   [Co
 
 1.2 Run a Program
 
-A list in Lisp—any list—is a program ready to run. If you run it (for which the Lisp jargon is evaluate),
-the computer will do one of three things: do nothing except return to you the list itself; send you an
-error message; or, treat the first symbol in the list as a command to do something. (Usually, of course,
-it is the last of these three things that you really want!) 
+A list in Lisp—any list—is a program ready to run. If you run it (for which the Lisp jargon is evaluate), the computer will do one of three things: do nothing except return to you the list itself; send you an error message; or, treat the first symbol in the list as a command to do something. (Usually, of course, it is the last of these three things that you really want!) 
 
-The single apostrophe, ', that I put in front of some of the example lists in preceding sections is called
-a quote; when it precedes a list, it tells Lisp to do nothing with the list, other than take it as it is
-written. But if there is no quote preceding a list, the first item of the list is special: it is a command for
-the computer to obey. (In Lisp, these commands are called functions.) The list (+ 2 2) shown above did
-not have a quote in front of it, so Lisp understands that the + is an instruction to do something with
-the rest of the list: add the numbers that follow. 
+The single apostrophe, ', that I put in front of some of the example lists in preceding sections is called a quote; when it precedes a list, it tells Lisp to do nothing with the list, other than take it as it is written. But if there is no quote preceding a list, the first item of the list is special: it is a command for the computer to obey. (In Lisp, these commands are called functions.) The list (+ 2 2) shown above did not have a quote in front of it, so Lisp understands that the + is an instruction to do something with the rest of the list: add the numbers that follow. 
 
 If you are reading this inside of GNU Emacs in Info, here is how you can evaluate such a list: place your
 cursor immediately after the right hand parenthesis of the following list and then type C-x C-e: 
@@ -913,8 +880,7 @@ C-e, you made an interactive call to the command eval-last-sexp. eval is an abbr
 “evaluate” and sexp is an abbreviation for “symbolic expression”. The command means “evaluate last
 symbolic expression”, which is the expression just before your cursor. 
 
-Each line above tells you what the Lisp interpreter evaluated next. The most recent action is at the top.
-The buffer is called the *Backtrace* buffer because it enables you to track Emacs backwards. 
+Each line above tells you what the Lisp interpreter evaluated next. The most recent action is at the top. The buffer is called the *Backtrace* buffer because it enables you to track Emacs backwards. 
 
 At the top of the *Backtrace* buffer, you see the line: 
 
@@ -964,18 +930,9 @@ Next: The Lisp Interpreter, Previous: Generate an Error Message, Up: List Proces
 
 1.4 Symbol Names and Function Definitions
 
-We can articulate another characteristic of Lisp based on what we have discussed so far—an
-important characteristic: a symbol, like +, is not itself the set of instructions for the computer to carry
-out. Instead, the symbol is used, perhaps temporarily, as a way of locating the definition or set of
-instructions. What we see is the name through which the instructions can be found. Names of people
-work the same way. I can be referred to as ‘Bob’; however, I am not the letters ‘B’, ‘o’, ‘b’ but am, or
-was, the consciousness consistently associated with a particular life-form. The name is not me, but it
-can be used to refer to me. 
+We can articulate another characteristic of Lisp based on what we have discussed so far—an important characteristic: a symbol, like +, is not itself the set of instructions for the computer to carry out. Instead, the symbol is used, perhaps temporarily, as a way of locating the definition or set of instructions. What we see is the name through which the instructions can be found. Names of people work the same way. I can be referred to as ‘Bob’; however, I am not the letters ‘B’, ‘o’, ‘b’ but am, or was, the consciousness consistently associated with a particular life-form. The name is not me, but it can be used to refer to me. 
 
-In Lisp, one set of instructions can be attached to several names. For example, the computer
-instructions for adding numbers can be linked to the symbol plus as well as to the symbol + (and are in
-some dialects of Lisp). Among humans, I can be referred to as ‘Robert’ as well as ‘Bob’ and by other
-words as well. 
+In Lisp, one set of instructions can be attached to several names. For example, the computer instructions for adding numbers can be linked to the symbol plus as well as to the symbol + (and are in some dialects of Lisp). Among humans, I can be referred to as ‘Robert’ as well as ‘Bob’ and by other words as well. 
 
 On the other hand, a symbol can have only one function definition attached to it at a time. Otherwise,
 the computer would be confused as to which definition to use. If this were the case among people,
@@ -1013,19 +970,7 @@ Next: Byte Compiling, Up: The Lisp Interpreter   [Contents][Index]
 
 Complications
 
-Now, for the first complication. In addition to lists, the Lisp interpreter can evaluate a symbol that is
-not quoted and does not have parentheses around it. The Lisp interpreter will attempt to determine
-the symbol’s value as a variable. This situation is described in the section on variables. (See Variables.) 
-
-The second complication occurs because some functions are unusual and do not work in the usual
-manner. Those that don’t are called special forms. They are used for special jobs, like defining a
-function, and there are not many of them. In the next few chapters, you will be introduced to several
-of the more important special forms. 
-
-As well as special forms, there are also macros. A macro is a construct defined in Lisp, which differs
-from a function in that it translates a Lisp expression into another expression that is to be evaluated in
-place of the original expression. (See Lisp macro.) 
-
+Now, for the first complication. In addition to lists, the Lisp interpreter can evaluate a symbol that is not quoted and does not have parentheses around it. The Lisp interpreter will attempt to determine the symbol’s value as a variable. This situation is described in the section on variables. (See Variables.) The second complication occurs because some functions are unusual and do not work in the usual manner. Those that don’t are called special forms. They are used for special jobs, like defining a function, and there are not many of them. In the next few chapters, you will be introduced to several of the more important special forms. As well as special forms, there are also macros. A macro is a construct defined in Lisp, which differs from a function in that it translates a Lisp expression into another expression that is to be evaluated in place of the original expression. (See Lisp macro.) 
 For the purposes of this introduction, you do not need to worry too much about whether something is
 a special form, macro, or ordinary function. For example, if is a special form (see The if Special
 Form), but when is a macro (see Lisp macro). In earlier versions of Emacs, defun was a special form,
@@ -1050,11 +995,7 @@ One other aspect of interpreting: the Lisp interpreter is able to interpret two 
 readable code, on which we will focus exclusively, and specially processed code, called byte compiled
 code, which is not humanly readable. Byte compiled code runs faster than humanly readable code. 
 
-You can transform humanly readable code into byte compiled code by running one of the compile
-commands such as byte-compile-file. Byte compiled code is usually stored in a file that ends with a .
-elc extension rather than a .el extension. You will see both kinds of file in the emacs/lisp directory; the
-files to read are those with .el extensions. 
-
+You can transform humanly readable code into byte compiled code by running one of the compile commands such as byte-compile-file. Byte compiled code is usually stored in a file that ends with a .elc extension rather than a .el extension. You will see both kinds of file in the emacs/lisp directory; the files to read are those with .el extensions. 
 As a practical matter, for most things you might do to customize or extend Emacs, you do not need to
 byte compile; and I will not discuss the topic here. See Byte Compilation in The GNU Emacs Lisp
 Reference Manual, for a full description of byte compilation. 
@@ -1086,10 +1027,7 @@ speak, to a different function or it may attempt to repeat continually what it i
 in an infinite loop. These actions are less common; and we can ignore them.) Most frequently, the
 interpreter returns a value. 
 
-At the same time the interpreter returns a value, it may do something else as well, such as move a
-cursor or copy a file; this other kind of action is called a side effect. Actions that we humans think are
-important, such as printing results, are often side effects to the Lisp interpreter. It is fairly easy to learn
-to use side effects. 
+At the same time the interpreter returns a value, it may do something else as well, such as move a cursor or copy a file; this other kind of action is called a side effect. Actions that we humans think are important, such as printing results, are often side effects to the Lisp interpreter. It is fairly easy to learn to use side effects. 
 
 In summary, evaluating a symbolic expression most commonly causes the Lisp interpreter to return a
 value and perhaps carry out a side effect; or else produce an error. 
@@ -1145,21 +1083,11 @@ Next: Arguments, Previous: Evaluation, Up: List Processing   [Contents][Index]
 
 1.7 Variables
 
-In Emacs Lisp, a symbol can have a value attached to it just as it can have a function definition attached
-to it. The two are different. The function definition is a set of instructions that a computer will obey. A
-value, on the other hand, is something, such as number or a name, that can vary (which is why such a
-symbol is called a variable). The value of a symbol can be any expression in Lisp, such as a symbol,
-number, list, or string. A symbol that has a value is often called a variable. 
+In Emacs Lisp, a symbol can have a value attached to it just as it can have a function definition attached to it. The two are different. The function definition is a set of instructions that a computer will obey. A value, on the other hand, is something, such as number or a name, that can vary (which is why such a symbol is called a variable). The value of a symbol can be any expression in Lisp, such as a symbol, number, list, or string. A symbol that has a value is often called a variable. 
 
-A symbol can have both a function definition and a value attached to it at the same time. Or it can have
-just one or the other. The two are separate. This is somewhat similar to the way the name Cambridge
-can refer to the city in Massachusetts and have some information attached to the name as well, such
-as “great programming center”. 
+A symbol can have both a function definition and a value attached to it at the same time. Or it can have just one or the other. The two are separate. This is somewhat similar to the way the name Cambridge can refer to the city in Massachusetts and have some information attached to the name as well, such as “great programming center”. 
 
-Another way to think about this is to imagine a symbol as being a chest of drawers. The function
-definition is put in one drawer, the value in another, and so on. What is put in the drawer holding the
-value can be changed without affecting the contents of the drawer holding the function definition, and
-vice versa. 
+Another way to think about this is to imagine a symbol as being a chest of drawers. The function definition is put in one drawer, the value in another, and so on. What is put in the drawer holding the value can be changed without affecting the contents of the drawer holding the function definition, and vice versa. 
 
 • fill-column, an Example Variable
 • Error Message for a Symbol Without a Function
@@ -1307,12 +1235,7 @@ single string abcdef. This can be seen by evaluating the following:
 
 The value produced by evaluating this expression is "abcdef". 
 
-A function such as substring uses both a string and numbers as arguments. The function returns a
-part of the string, a substring of the first argument. This function takes three arguments. Its first
-argument is the string of characters, the second and third arguments are numbers that indicate the
-beginning (inclusive) and end (exclusive) of the substring. The numbers are a count of the number of
-characters (including spaces and punctuation) from the beginning of the string. Note that the
-characters in a string are numbered from zero, not one. 
+A function such as substring uses both a string and numbers as arguments. The function returns a part of the string, a substring of the first argument. This function takes three arguments. Its first argument is the string of characters, the second and third arguments are numbers that indicate the beginning (inclusive) and end (exclusive) of the substring. The numbers are a count of the number of characters (including spaces and punctuation) from the beginning of the string. Note that the characters in a string are numbered from zero, not one. 
 
 For example, if you evaluate the following: 
 
@@ -1320,12 +1243,7 @@ For example, if you evaluate the following:
 
 you will see "fox" appear in the echo area. The arguments are the string and the two numbers. 
 
-Note that the string passed to substring is a single atom even though it is made up of several words
-separated by spaces. Lisp counts everything between the two quotation marks as part of the string,
-including the spaces. You can think of the substring function as a kind of atom smasher since it takes
-an otherwise indivisible atom and extracts a part. However, substring is only able to extract a
-substring from an argument that is a string, not from another type of atom such as a number or
-symbol. 
+Note that the string passed to substring is a single atom even though it is made up of several words separated by spaces. Lisp counts everything between the two quotation marks as part of the string, including the spaces. You can think of the substring function as a kind of atom smasher since it takes an otherwise indivisible atom and extracts a part. However, substring is only able to extract a substring from an argument that is a string, not from another type of atom such as a number or symbol. 
 
 ---------------------------------------------------------------------------------------
 
@@ -1433,13 +1351,7 @@ C-@ or C-SPC command, its position is kept as a marker. The mark can be consider
 number of characters the location is from the beginning of the buffer.) In Emacs Lisp, + can be used to
 add the numeric value of marker positions as numbers. 
 
-The ‘p’ of number-or-marker-p is the embodiment of a practice started in the early days of Lisp
-programming. The ‘p’ stands for predicate. In the jargon used by the early Lisp researchers, a predicate
-refers to a function to determine whether some property is true or false. So the ‘p’ tells us that
-number-or-marker-p is the name of a function that determines whether it is true or false that the
-argument supplied is a number or a marker. Other Lisp symbols that end in ‘p’ include zerop, a
-function that tests whether its argument has the value of zero, and listp, a function that tests
-whether its argument is a list. 
+The ‘p’ of number-or-marker-p is the embodiment of a practice started in the early days of Lisp programming. The ‘p’ stands for predicate. In the jargon used by the early Lisp researchers, a predicate refers to a function to determine whether some property is true or false. So the ‘p’ tells us that number-or-marker-p is the name of a function that determines whether it is true or false that the argument supplied is a number or a marker. Other Lisp symbols that end in ‘p’ include zerop, a function that tests whether its argument has the value of zero, and listp, a function that tests whether its argument is a list. 
 
 Finally, the last part of the error message is the symbol hello. This is the value of the argument that
 was passed to +. If the addition had been passed the correct type of object, the value passed would
@@ -1583,11 +1495,7 @@ Next: Counting, Previous: Using set, Up: Setting the Value of a Variable   [Cont
 
 1.9.2 Using setq
 
-As a practical matter, you almost always quote the first argument to set. The combination of set and
-a quoted first argument is so common that it has its own name: the special form setq. This special
-form is just like set except that the first argument is quoted automatically, so you don’t need to type
-the quote mark yourself. Also, as an added convenience, setq permits you to set several different
-variables to different values, all in one expression. 
+As a practical matter, you almost always quote the first argument to set. The combination of set and a quoted first argument is so common that it has its own name: the special form setq. This special form is just like set except that the first argument is quoted automatically, so you don’t need to type the quote mark yourself. Also, as an added convenience, setq permits you to set several different variables to different values, all in one expression. 
 
 To set the value of the variable carnivores to the list '(lion tiger leopard) using setq, the
 following expression is used: 
@@ -1612,11 +1520,7 @@ list of herbivores to the symbol herbivores:
 (The expression could just as well have been on one line, but it might not have fit on a page; and
 humans find it easier to read nicely formatted lists.) 
 
-Although I have been using the term “assign”, there is another way of thinking about the workings of
-set and setq; and that is to say that set and setq make the symbol point to the list. This latter way of
-thinking is very common and in forthcoming chapters we shall come upon at least one symbol that
-has “pointer” as part of its name. The name is chosen because the symbol has a value, specifically a
-list, attached to it; or, expressed another way, the symbol is set to point to the list. 
+Although I have been using the term “assign”, there is another way of thinking about the workings of set and setq; and that is to say that set and setq make the symbol point to the list. This latter way of thinking is very common and in forthcoming chapters we shall come upon at least one symbol that has “pointer” as part of its name. The name is chosen because the symbol has a value, specifically a list, attached to it; or, expressed another way, the symbol is set to point to the list. 
 
 ---------------------------------------------------------------------------------------
 
@@ -1696,17 +1600,11 @@ A few simple exercises:
 
 ---------------------------------------------------------------------------------------
 
-Next: How To Write Function Definitions, Previous: List Processing, Up: An Introduction to
-Programming in Emacs Lisp   [Contents][Index]
+Next: How To Write Function Definitions, Previous: List Processing, Up: An Introduction to Programming in Emacs Lisp [Contents][Index]
 
 2 Practicing Evaluation
 
-Before learning how to write a function definition in Emacs Lisp, it is useful to spend a little time
-evaluating various expressions that have already been written. These expressions will be lists with the
-functions as their first (and often only) element. Since some of the functions associated with buffers
-are both simple and interesting, we will start with those. In this section, we will evaluate a few of
-these. In another section, we will study the code of several other buffer-related functions, to see how
-they were written. 
+Before learning how to write a function definition in Emacs Lisp, it is useful to spend a little time evaluating various expressions that have already been written. These expressions will be lists with the functions as their first (and often only) element. Since some of the functions associated with buffers are both simple and interesting, we will start with those. In this section, we will evaluate a few of these. In another section, we will study the code of several other buffer-related functions, to see how they were written. 
 
 • How to Evaluate
 • Buffer Names
